<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.simpalm.sqliteexercise0926.MainActivity">

    <Button
        android:id="@+id/all_user_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_user_btn" />

    <Button
        android:id="@+id/add_user_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_user_btn" />


    <Button
        android:id="@+id/modify_user_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify_user_btn" />


    <Button
        android:id="@+id/delete_user_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_user_btn" />

    <Button
        android:id="@+id/add_user_contact_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_user_contact_btn" />


</LinearLayout>
