<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.simpalm.sqliteexercise0926.AddUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin"
            android:gravity="center"
            android:text="@string/add_user_title"
            android:textSize="@dimen/login_text_size"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/username_adduser_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text_box"
            android:layout_margin="@dimen/login_margin"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:hint="@string/username_adduser_et"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/password_adduser_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text_box"
            android:layout_margin="@dimen/login_margin"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:hint="@string/password_adduser_et"
            android:inputType="textPostalAddress" />

        <EditText

            android:id="@+id/name_adduser_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text_box"
            android:layout_margin="@dimen/login_margin"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:hint="@string/name_adduser"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/number_adduser_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text_box"
            android:layout_margin="@dimen/login_margin"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:hint="@string/number_adduser_et"
            android:inputType="phone" />

        <EditText
            android:id="@+id/dob_adduser_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text_box"
            android:layout_margin="@dimen/login_margin"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:hint="@string/dob_adduser_et"
            android:inputType="date" />

        <EditText
            android:id="@+id/address_adduser_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text_box"
            android:layout_margin="@dimen/login_margin"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:hint="@string/address_adduser_et"
            android:inputType="textPostalAddress" />


        <Button
            android:id="@+id/addser_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/login_margin"
            android:layout_marginTop="@dimen/login_margin"
            android:background="@drawable/login_btn"
            android:text="@string/add_user_title"
            android:textColor="@android:color/holo_green_light" />
    </LinearLayout>

</ScrollView>
