<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.simpalm.sqliteexercise0926.AddUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/name_delete_tv"
            android:layout_marginTop="@dimen/login_margin"
            android:gravity="center"
            android:text="@string/delete_user_tv"
            android:textSize="@dimen/login_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_delete_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/name_delete_tv" />

                <TextView
                    android:id="@+id/dob_delete_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/dob_delete_tv" />


                <TextView
                    android:id="@+id/number_delete_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/number_delete_tv" />


                <TextView
                    android:id="@+id/address_delete_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/address_delete_tv" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/login_margin"
                android:gravity="right"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/delete_user_btn"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:background="@android:drawable/ic_delete" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</ScrollView>
